fixing build.gradle to build mutiple binarys